welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	for (i<- 0 to nums.length -1){
		if (nums(i)==1){
			for (j<- 0 to nums.length -1 && j!=i){
				if (nums(j)==1){
					for (k<- 0 to nums.length -1 && k!=j){
						if (nums(k)==1){
							return true
						}
					}
				}
			}
		}
		if (nums(i)==2){
			for (j<- 0 to nums.length -1 && j!=i){
				if (nums(j)==2){
					for (k<- 0 to nums.length -1 && k!=j){
						if (nums(k)==2){
							return true
						}
					}
				}
			}
		}
	}
	return false
}